After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 665166 - The notification-daemon stop working after receiving a transient notification.
The notification-daemon stop working after receiving a transient notification.
Status: RESOLVED FIXED
Product: notification-daemon
Classification: Other
Component: general
0.7.x
Other Linux
: Normal major
: ---
Assigned To: notification-daemon-maint
notification-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-11-30 01:22 UTC by Nicolas Buduroi
Modified: 2014-10-30 14:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicolas Buduroi 2011-11-30 01:22:09 UTC
If I send a transient notification to the notification-daemon, it is displayed but after it disappear no more notifications are displayed, transient or not.

Example:

(1) $ notify-send "bla" "blub" # working
(2) $ notify-send --hint=int:transient:1 "bla" "blub" # working
(3) $ notify-send "bla" "blub" # not working
(4) $ notify-send "bla" "blub" # not working
(5) $ notify-send "bla" "blub" # not working, after the notification of line 2 disappeared

Looking at the dbus-monitor output, for the above example, I see the method call for the first 4 calls, but not the last one. So it seems to be related to what happen in the `on_bubble_destroyed` callback, but I've not went further as I don't have time to setup my machine to debug this.

I've tried other hints and didn't noticed any problem with them.

I'm using ArchLinux with gnome-session and xmonad (it also happen with the gnome desktop). Here's the relevant library information:

 * extra/notification-daemon 0.7.3-1
 * extra/libnotify 0.7.4-1
Comment 2 André Klapper 2012-04-03 13:46:44 UTC
Mass-fixing incorrect assignee and QA contact scheme for notification-daemon so interested people can follow its development. (See 606364#c1 for ref.)
Comment 3 Alberts Muktupāvels 2014-10-30 14:33:13 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.