fix crash in nd_notification_get_is_transient

It is error to call g_variant_get_boolean on types other than
G_VARIANT_TYPE_BOOLEAN. Fix this by converting values to boolean.

1) G_VARIANT_TYPE_INT32: 0 == FALSE, any other value == TRUE
2) G_VARIANT_TYPE_DOUBLE: 0 == FALSE, any other value == TRUE
3) G_VARIANT_TYPE_STRING: TRUE
4) G_VARIANT_TYPE_BYTE: 0 == FALSE, any other value == TRUE

This is based on patch that is attached in debian bug, link
available in bug report.

https://bugzilla.gnome.org/show_bug.cgi?id=665166